Fix: project details page no longer wraps content when screen width <1228px

--- a/src/app/project-detail/project-detail.component.css
+++ b/src/app/project-detail/project-detail.component.css
@@ -1,9 +1,13 @@
 .project-content {
   position: relative;
   z-index: 0;
-  max-width: 100%;
-  min-width: 100%;
+  width: 100%;
   min-height: 100%;
   margin-right: auto;
   padding: 1.5em 1em;
+}
+
+.project-page {
+  max-width: 70em;
+  min-width: 10em;
 }
